Fixed description of MSE results for Poly and Ridge Regression.

--- a/Employee Satisfaction Survey Data.ipynb
+++ b/Employee Satisfaction Survey Data.ipynb
@@ -125509,7 +125509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the above findings, the Ridge regression model contained the lowest MSE, and the highest model accuracy of all of the tested models. We want to explore this further, testing different values for α to find the best fit within this model. "
+    "Based on the above findings, the Polynomial regression model contained the lowest MSE, and the highest model accuracy of all of the tested models. We want to explore the Ridge Regression model further, testing different values for α to find the best fit within this model. "
    ]
   },
   {
@@ -126595,7 +126595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have determined that the default __(α = 0.1)__ is the best fit for the ridge regression model. "
+    "We have determined that the default __(α = 0.1)__ is the best fit for the ridge regression model. This model has a higher accuracy than a Polynomial Regression model with a degree of 3.  "
    ]
   },
   {
